--- a/src/app/categories/places/places.component.css
+++ b/src/app/categories/places/places.component.css
@@ -1,6 +1,69 @@
 .wrapper {
-  margin: 5%;
   font-family: "Open Sans", sans-serif;
+}
+
+.filter {
+  margin: 2%;
+  height: 300px;
+  background: transparent;
+  background: rgb(93, 232, 148);
+  background: linear-gradient(
+    185deg,
+    rgba(190, 250, 247, 0.675) 12%,
+    rgb(40, 169, 172) 79%
+  );
+
+  box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  text-align: center;
+  padding: 30px;
+  margin-top: 30px;
+  color: #ffffff;
+}
+
+
+/* categories navbar */
+.navbar {
+  color: #ffffff;
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+}
+
+a {
+  background: transparent;
+  width: 25%;
+  height: 300px;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+a:hover {
+  background-color: rgba(154, 218, 218, 0.675);
+}
+
+p {
+  padding-top: 45%;
+  font-weight: bold;
+}
+
+#a1 {
+  box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+}
+
+#a3 {
+  box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
 }
 
 /* all h2's */
@@ -12,91 +75,19 @@ h2 {
   padding-bottom: 15px;
 }
 
-span {
-  padding-right: 10px;
-}
-
-.input-group-append {
-  margin-bottom: 25px;
-}
-
-input[type=search] {
-  width: 15%;
-  -webkit-transition: width 0.4s ease-in-out;
-  transition: width 0.4s ease-in-out;
-
-  box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-}
-
-/* When the input field gets focus, change its width to 100% */
-input[type=search]:focus {
-  width: 60%;
-}
-
-/* categories navbar */
-.navbar {
-  color: #ffffff;
-  display: flex;
-  flex-direction: row;
-  width: 60%;
-  margin: auto;
-  padding-bottom: 20px;
-}
-
-a {
-  background: rgb(255, 220, 160);
-  background: linear-gradient(
-    185deg,
-    rgba(255, 220, 160, 1) 15%,
-    rgba(246, 108, 108, 0.8337349397590361) 83%
-  );
-
-  box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-
-  height: 80px;
-  font-size: 1.2rem;
-  text-align: start;
-  text-decoration: none;
-  border-radius: 5%;
-  padding: 10px;
-  width: 20%;
-
-}
-
-a:hover {
-  background-color: #F9907D;
-}
-
 /* map */
 .nearby {
-  background-color: rgba(187, 247, 211, 0.675);
+  margin: 2% 5%;
+  color: black;
 }
 
 .nearby h2 {
-  padding-top: 20px;
-}
-
-.nearby a {
-  padding: 0;
-}
-
-.map {
-  width: 85%;
-  margin: auto;
   padding-top: 15px;
-  padding-bottom: 40px;
+  margin-bottom: 0;
 }
 
-img {
-  width: 100%;
-
-  box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+app-map {
+  padding: 20px;
 }
 
 /* listed items */
