--- a/src/app/user-info/user-info.component.html
+++ b/src/app/user-info/user-info.component.html
@@ -1,1 +1,25 @@
-<p>user-info works!</p>
+<div class="row">
+  <div class="col-md-4 offset-md-3 mt-4">
+      <form>
+        <h3>Edit Profile</h3>
+              <label for="registerName">Name</label>
+              <input type="name" class="form-control" id="registerName"  [formControl]="name">
+              <label for="registerEmail">Email</label>
+              <input type="email"
+                     class="form-control"
+                     id="registerEmail"
+                     placeholder="Enter email">
+          <div class="form-group">
+              <label for="registerPassword">Password</label>
+              <input type="password"
+                     class="form-control"
+                     id="registerPassword"
+                     placeholder="Password">
+          </div>
+          <button type="submit"
+                  class="btn btn-outline">Save Changes</button>
+          <button type="submit"
+                  class="btn btn-outline ml-2">Cancel</button>
+      </form>
+  </div>
+</div>
