--- a/src/app/categories/places/places.component.html
+++ b/src/app/categories/places/places.component.html
@@ -25,7 +25,7 @@
     </div>
   </section>
 
-  <div class="list">
+  <!-- <div class="list">
     <h2>Kaikki paikat</h2>
     <input type="date" id="calendar" name="calendar" value="Pick a date"
     min="2021-01-04" max="2022-31-12">
@@ -35,9 +35,34 @@
         {{place.description.body}}
       </p>
       <p>{{place.location.address.street_address}}</p>
-      <!-- <p>{{place.location.lat}}</p>
-      <p>{{place.location.lon}}</p> -->
+      <p>{{place.location.lat}}</p>
+      <p>{{place.location.lon}}</p>
 
+    </div>
+  </div> -->
+
+  <div class="card mb-3" style="max-width: 900px; ">
+    <div class="row g-0" *ngFor="let place of places.slice(0,7)">
+      <div class="col-md-4">
+        <div class="card-img-wrapper">
+        <img
+          src={{place.description.images[0].url}}
+          alt="place-picture"
+          class="card-img-top"
+        />
+      </div>
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title mb-0">{{place.name.fi}}</h5>
+          <p class="card-text mb-0"  >
+            {{place.description.body | stripHTML}}
+          </p>
+          <p class="card-text">
+            <small class="text-muted">{{place.location.address.street_address}}</small>
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 </section>
