--- a/src/app/categories/events/events.component.css
+++ b/src/app/categories/events/events.component.css
@@ -50,7 +50,7 @@ a:hover {
   background-color: rgba(233, 223, 139, 0.683);
 }
 
-p {
+.navbar p {
   padding-top: 45%;
   font-weight: bold;
 }
@@ -100,32 +100,28 @@ h2 {
   padding: 0;
 }
 
-
-/* listed items */
-.list {
-  /* background: rgb(144, 100, 211);
-  background: linear-gradient(
-    0deg,
-    rgba(144, 100, 211, 1) 0%,
-    rgba(255, 112, 169, 0.6834532374100719) 100%
-  ); */
-  margin: auto;
+/* Category list */
+.card {
+  border: none;
+}
+.card-text {
+  display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-.list input {
-  margin-top: 20px;
-  width: 20%;
+.col-md-8 {
+  display: flex;
+  align-items:center;
 }
 
-.list input {
-  margin-top: 0;
-  margin-left: 20px;
+.card-body h5{
+  font-weight: bolder !important;
 }
 
-.list p {
-  margin-left: 20px;
-  padding-top: 10px;
-}
+
 
 
 
@@ -154,7 +150,7 @@ h2 {
   }
 
   /* listed items */
-  .list {
+  /* .list {
     margin-top: 10px;
   }
 
@@ -167,7 +163,7 @@ h2 {
   .list p {
     margin-left: 20px;
     padding-top: 10px;
-  }
+  } */
 
 }
 
@@ -194,7 +190,7 @@ h2 {
     padding: 5px;
   }
 
-  .list input {
+  /* .list input {
     margin-top: 0;
     width: 50%;
     margin-left: 20px;
@@ -203,7 +199,7 @@ h2 {
   .list p {
     margin-left: 20px;
     padding-top: 10px;
-  }
+  } */
 
 }
 
@@ -232,7 +228,7 @@ h2 {
     padding: 0;
   }
 
-  .list input {
+  /* .list input {
     margin-top: 0;
     width: 50%;
     margin-left: 20px;
@@ -241,7 +237,7 @@ h2 {
   .list p {
     margin-left: 20px;
     padding-top: 10px;
-  }
+  } */
 
   }
 
