--- a/src/app/categories/activities/activities.component.html
+++ b/src/app/categories/activities/activities.component.html
@@ -27,14 +27,14 @@
   </section>
 
     <h2>Kaikki aktiviteetit</h2>
-    <input
+    <!-- <input
       type="date"
       id="calendar"
       name="calendar"
       value="Pick a date"
       min="2021-01-04"
       max="2022-31-12"
-    />
+    /> -->
 
     <!-- <div *ngFor="let activity of activities.slice(0, 7)">
       <h2>{{ activity.name.fi }}</h2>
