--- a/src/app/categories/events/events.component.html
+++ b/src/app/categories/events/events.component.html
@@ -19,12 +19,12 @@
     </div>
   </section>
 
-  <!-- <section class="nearby">
+   <section class="nearby">
     <h2>Ympärilläsi</h2>
     <div class="map">
       <app-map></app-map>
     </div>
-  </section> -->
+  </section>
 
   <div class="card mb-3" style="max-width: 900px; ">
     <div class="row g-0" *ngFor="let event of events.slice(0,7)">
