--- a/src/app/categories/places/places.component.css
+++ b/src/app/categories/places/places.component.css
@@ -49,7 +49,7 @@ a:hover {
   background-color: rgba(154, 218, 218, 0.675);
 }
 
-p {
+.navbar p {
   padding-top: 45%;
   font-weight: bold;
 }
@@ -90,24 +90,25 @@ app-map {
   padding: 20px;
 }
 
-/* listed items */
-.list {
-  margin: auto;
+/* Category list */
+.card {
+  border: none;
+}
+.card-text {
+  display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-.list input {
-  margin-top: 20px;
-  width: 20%;
+.col-md-8 {
+  display: flex;
+  align-items:center;
 }
 
-.list input {
-  margin-top: 0;
-  margin-left: 20px;
-}
-
-.list p {
-  margin-left: 20px;
-  padding-top: 10px;
+.card-body h5{
+  font-weight: bolder !important;
 }
 
 
@@ -147,7 +148,7 @@ app-map {
   }
 
   /* listed items */
-  .list {
+  /* .list {
     margin-top: 10px;
   }
 
@@ -160,7 +161,7 @@ app-map {
   .list p {
     margin-left: 20px;
     padding-top: 10px;
-  }
+  } */
 
 }
 
@@ -187,7 +188,7 @@ app-map {
     padding: 5px;
   }
 
-  .list input {
+  /* .list input {
     margin-top: 0;
     width: 50%;
     margin-left: 20px;
@@ -196,7 +197,7 @@ app-map {
   .list p {
     margin-left: 20px;
     padding-top: 10px;
-  }
+  } */
 
 }
 
@@ -225,7 +226,7 @@ app-map {
     padding: 0;
   }
 
-  .list input {
+  /* .list input {
     margin-top: 0;
     width: 50%;
     margin-left: 20px;
@@ -234,7 +235,7 @@ app-map {
   .list p {
     margin-left: 20px;
     padding-top: 10px;
-  }
+  } */
 
   }
 
