--- a/src/app/categories/places/places.component.html
+++ b/src/app/categories/places/places.component.html
@@ -45,11 +45,11 @@
     <div class="row g-0" *ngFor="let place of places.slice(0,7)">
       <div class="col-md-4">
         <div class="card-img-wrapper">
-        <img
+        <!-- <img
           src={{place.description.images[0].url}}
           alt="place-picture"
           class="card-img-top"
-        />
+        /> -->
       </div>
       </div>
       <div class="col-md-8">
