--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -2,11 +2,7 @@
 
   <section class="top">
     <div class="row">
-      <div class="col-lg-6">
-        <!-- <div class="input-group-append">
-          <input type="search" class="form-control" placeholder="Etsi sivustolta.."/>
-          <button class="btn btn-sm btn-light" type="button"><i class="fas fa-search"></i></button>
-        </div> -->
+      <div class="col-lg-6" id="first-col">
           <h1>Henkilökohtainen<br> kaupunkioppaasi<br> Helsingissä</h1>
       </div>
       <div class="col-lg-6">
@@ -37,7 +33,8 @@
   </div> -->
 
   <section class="nearby">
-    <h2>Tutki ympäristöäsi kartan avulla</h2>
+    <h2 id="desktop">Tutki ympäristöäsi kartan avulla</h2>
+    <h2 id="mobile">Lähellä</h2>
       <app-map></app-map>
   </section>
 
