--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,8 +8,11 @@
           <i class="fas fa-search"></i>
         </button>
       </div>
-      <div id="logo">
+      <div id="logodesktop">
         <a class="nav-link navbar-brand"  routerLink="/frontpage" routerLinkActive="active"><img src="../../assets/SirkaLogotesti.png" alt=""></a>
+      </div>
+      <div id="logomobile">
+        <a id="mobile" class="nav-link navbar-brand"  routerLink="/frontpage" routerLinkActive="active"><img src="../../assets/kopiomobile1.png" alt=""></a>
       </div>
         <ul class="navbar-nav">
             <li class="nav-item" id="weather">
