--- a/src/app/user-info/user-info.component.html
+++ b/src/app/user-info/user-info.component.html
@@ -1,25 +1,31 @@
 <div class="row">
   <div class="col-md-4 offset-md-3 mt-4">
       <form>
-        <h3>Edit Profile</h3>
-              <label for="registerName">Name</label>
-              <input type="name" class="form-control" id="registerName"  [formControl]="name">
+        <h3>Muokkaa profiiliasi</h3>
+        <div class="form-group">
+              <label for="registerName">Nimi</label>
+              <input type="name" 
+              class="form-control" 
+              id="registerName" 
+              placeholder="Nimi" 
+              [formControl]="name">
               <label for="registerEmail">Email</label>
               <input type="email"
-                     class="form-control"
-                     id="registerEmail"
-                     placeholder="Enter email">
-          <div class="form-group">
-              <label for="registerPassword">Password</label>
+              class="form-control"
+              id="registerEmail"
+              placeholder="Email"
+              [formControl]="name">
+              <label for="registerPassword">Salasana</label>
               <input type="password"
-                     class="form-control"
-                     id="registerPassword"
-                     placeholder="Password">
+              class="form-control"
+              id="registerPassword"
+              placeholder="Salasana"
+              [formControl]="name">
           </div>
           <button type="submit"
-                  class="btn btn-outline">Save Changes</button>
+                  class="btn btn-outline">Tallenna</button>
           <button type="submit"
-                  class="btn btn-outline ml-2">Cancel</button>
+                  class="btn btn-outline ml-2">Peruuta</button>
       </form>
   </div>
 </div>
