--- a/src/app/user-login/login/login.component.html
+++ b/src/app/user-login/login/login.component.html
@@ -2,33 +2,31 @@
     <div class="col-md-4 offset-md-3 mt-4">
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <div class="form-group">
-                <h3>Login</h3>
-                <label for="email">Email address</label>
+                <h3>Kirjaudu sisään</h3>
+                <label for="email">Email</label>
                 <input type="text" formControlName="email" class="form-control"
                     [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
                 <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                    <div *ngIf="f.email.errors.required">email is required</div>
+                    <div *ngIf="f.email.errors.required">Email-osoite vaaditaan </div>
                 </div>
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                    else.</small>
             </div>
             <div class="form-group">
-                <label for="password">Password</label>
+                <label for="password">Salasana</label>
                 <input type="password" formControlName="password" class="form-control"
                     [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
                 <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                    <div *ngIf="f.password.errors.required">Password is required</div>
+                    <div *ngIf="f.password.errors.required">Salasana vaaditaan</div>
                 </div>
             </div>
             <div class="d-grid gap-2 col-6 mx-auto">
                 <button [disabled]="loading" class="btn btn-primary">
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                    Login
+                    Kirjaudu sisään
                 </button>
             </div>
-            <a class="nav-link" routerLink="/register" routerLinkActive="active">Don't have an account? Sign up here
+            <a class="nav-link" routerLink="/register" routerLinkActive="active">Ei tiliä? Luo uusi tästä
             </a>
-            <a class="nav-link" routerLink="/reset-password" routerLinkActive="active">Forgot password?
+            <a class="nav-link" routerLink="/reset-password" routerLinkActive="active">Unohdin salasanani
             </a>
         </form>
     </div>
