--- a/src/app/user-login/register/register.component.html
+++ b/src/app/user-login/register/register.component.html
@@ -1,23 +1,25 @@
 <div class="row">
     <div class="col-md-4 offset-md-3 mt-4">
         <form>
-          <h3>Register new user</h3>
-                <label for="registerName">Name</label>
-                <input type="name" class="form-control" id="registerName" placeholder="Your Name">
+          <h3>Rekisteröi uusi käyttäjä</h3>
+                <label for="registerName">Nimi</label>
+                <input type="name" class="form-control" id="registerName" placeholder="Nimi">
                 <label for="registerEmail">Email</label>
                 <input type="email"
                        class="form-control"
                        id="registerEmail"
-                       placeholder="Enter email">
+                       placeholder="Email">
             <div class="form-group">
-                <label for="registerPassword">Password</label>
+                <label for="registerPassword">Salasana</label>
                 <input type="password"
                        class="form-control"
                        id="registerPassword"
-                       placeholder="Password">
+                       placeholder="Salasana">
             </div>
             <button type="submit"
-                    class="btn btn-outline">Register <i class="fas fa-sign-in-alt"></i></button>
+                    class="btn btn-outline">Rekisteröi<i class="fas fa-sign-in-alt"></i></button>
+                    <a class="nav-link" routerLink="/login" routerLinkActive="active">Olenkin käyttäjä! Kirjaudu sisään tästä
+                    </a>
         </form>
     </div>
   </div>
