--- a/src/app/user-login/reset-password/reset-password.component.html
+++ b/src/app/user-login/reset-password/reset-password.component.html
@@ -1,16 +1,16 @@
 <div class="row">
     <div class="col-md-4 offset-md-3 mt-4">
         <form>
-          <h3>Reset Password</h3>
+          <h3>Muuta salasana</h3>
             <div class="form-group">
-                <label for="resetPasswordEmail">Account Email</label>
+                <label for="resetPasswordEmail">E-mail</label>
                 <input type="email"
                        name="email"
                        class="form-control"
                        id="resetPasswordEmail"
-                       placeholder="Enter email">
+                       placeholder="Syötä e-mail">
             </div>
-            <button type="submit" class="btn btn-outline">Reset Password <i class="fas fa-paper-plane"></i></button>
+            <button type="submit" class="btn btn-outline">Muuta salasana <i class="fas fa-paper-plane"></i></button>
         </form>
     </div>
   </div>
