--- a/src/app/categories/places/places.component.css
+++ b/src/app/categories/places/places.component.css
@@ -111,6 +111,10 @@ app-map {
   font-weight: bolder !important;
 }
 
+.card-img-wrapper img{
+  max-width: 300px;
+}
+
 
 
 @media only screen and (max-width: 768px) {
