--- a/src/app/categories/events/events.component.html
+++ b/src/app/categories/events/events.component.html
@@ -4,8 +4,7 @@
     <div class="row">
       <div class="col-4">
         <h1>
-          Tutustu Helsingin tapahtumiin helposti kategorioittain tai kartan
-          avulla
+          Tutustu lähiympäristösi tapahtumiin
         </h1>
       </div>
       <div class="col-8">
@@ -20,10 +19,7 @@
   </section>
 
   <section class="nearby">
-    <h2>Ympärilläsi</h2>
-    <div class="map">
       <app-map></app-map>
-    </div>
   </section>
 
   <div class="list">
