--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,8 +13,8 @@
       <ul class="navbar-nav">
         <li class="nav-item" id="weather">
           <a class="nav-link" routerLink="/weather" routerLinkActive="active">
-              <img class="weatherIcon" src="https://openweathermap.org/img/wn/{{CurrentWeatherdata.current_icon}}@2x.png" alt="icon">
-              <!-- {{CurrentWeatherdata.current_temp}}°C --></a>
+              <img class="weatherIcon" src="https://openweathermap.org/img/wn/{{Weatherdata.current_icon}}@2x.png" alt="icon">
+              <!-- {{Weatherdata.current_temp}}°C --></a>
         </li>
                     <!-- <li class="nav-item" id="weather">
               <a class="nav-link" routerLink="/weather" routerLinkActive="active"><i class="fas fa-cloud-sun fa-2x"></i></a>
